<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    tools:context=".SettingsOptions">

    <Switch
        android:id="@+id/switch3"
        android:layout_width="200dp"
        android:layout_height="54dp"

        android:layout_marginStart="104dp"
        android:layout_marginLeft="104dp"
        android:checked="false"
        android:text="@string/settings_dark_mode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch2" />

    <Button
        android:id="@+id/button_privacy_policy"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="215dp"
        android:layout_height="70dp"
        android:layout_marginStart="98dp"
        android:layout_marginLeft="98dp"
        android:lineSpacingExtra="@dimen/activity_vertical_margin"
        android:text="@string/settings_privacy_policy"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_Tos" />

    <Button
        android:id="@+id/button_Security"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="215dp"
        android:layout_height="70dp"
        android:layout_marginStart="98dp"
        android:layout_marginLeft="98dp"
        android:lineSpacingExtra="@dimen/activity_vertical_margin"
        android:text="@string/settings_security"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_privacy_policy" />

    <Button
        android:id="@+id/button_Tos"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="215dp"
        android:layout_height="70dp"
        android:layout_marginStart="98dp"
        android:layout_marginLeft="98dp"
        android:lineSpacingExtra="@dimen/activity_vertical_margin"
        android:text="@string/settings_tos"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_About" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <TextView
        android:id="@+id/text_home6"
        android:layout_width="407dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/action_settings"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#C6000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="200dp"
        android:layout_height="54dp"
        android:layout_marginStart="104dp"
        android:layout_marginLeft="104dp"
        android:layout_marginTop="16dp"
        android:checked="true"
        android:text="@string/settings_notification"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_home6" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="200dp"
        android:layout_height="54dp"

        android:layout_marginStart="104dp"
        android:layout_marginLeft="104dp"
        android:checked="true"
        android:text="@string/settings_sounds"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1" />

    <Button
        android:id="@+id/button_About"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="215dp"
        android:layout_height="70dp"
        android:layout_marginStart="98dp"
        android:layout_marginLeft="98dp"
        android:lineSpacingExtra="@dimen/activity_vertical_margin"
        android:text="@string/settings_about"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch3" />

</androidx.constraintlayout.widget.ConstraintLayout>


