<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reusable_ItemRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reusables_AddItemsButton" />

    <TextView
        android:id="@+id/reusables_MainHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_horizontal"
        android:text="@string/reusables_MainHeader"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/colorB"/>

    <TextView
        android:id="@+id/reusables_UsesHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/reusables_UsesHeader"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/reusables_MainHeader"
        app:layout_constraintTop_toBottomOf="@+id/reusables_MainHeader"
        android:textColor="@color/colorB"/>

    <TextView
        android:id="@+id/reusables_ItemsHeader"
        android:layout_width="53dp"
        android:layout_height="21dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="310dp"
        android:gravity="center_horizontal"
        android:text="@string/reusables_ItemsHeader"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/reusables_MainHeader"
        app:layout_constraintTop_toBottomOf="@+id/reusables_UsesHeader"
        android:textColor="@color/colorB"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="17dp" />

    <Button
        android:id="@+id/reusables_AddUsesButton"
        android:layout_width="90dp"
        android:layout_height="37dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/reusables_AddButton"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/reusables_UsesHeader"
        app:layout_constraintTop_toTopOf="@+id/reusables_UsesHeader"
        android:background="@color/colorPrimary"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorAccent"
        android:typeface="normal"/>

    <Button
        android:id="@+id/reusables_AddItemsButton"
        android:layout_width="90dp"
        android:layout_height="38dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:background="@color/colorPrimary"
        android:text="@string/reusables_AddButton"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        android:typeface="normal"
        app:layout_constraintStart_toEndOf="@+id/reusables_ItemsHeader"
        app:layout_constraintTop_toTopOf="@+id/reusables_ItemsHeader" />

    <Button
        android:id="@+id/reusables_RmvUsesButton"
        android:layout_width="90dp"
        android:layout_height="38dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:text="@string/reusables_RemoveButton"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/reusables_AddUsesButton"
        app:layout_constraintTop_toTopOf="@+id/reusables_UsesHeader"
        android:background="@color/colorPrimary"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorAccent"
        android:typeface="normal"/>

    <Button
        android:id="@+id/reusables_RmvItemsButton"
        android:layout_width="90dp"
        android:layout_height="38dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:text="@string/reusables_RemoveButton"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/reusables_AddItemsButton"
        app:layout_constraintTop_toTopOf="@+id/reusables_ItemsHeader"
        android:background="@color/colorPrimary"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorAccent"
        android:typeface="normal"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reusables_UsesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/reusables_AddItemsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reusables_AddUsesButton" />


</androidx.constraintlayout.widget.ConstraintLayout>